<resources>
    <string name="app_name">PacmanAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="resume">Resume</string>
    <string name="play">New Game</string>
    <string name="help">How To Play</string>

    <string name="howToPlayLabel">HOW TO PLAY</string>
    <string name="howToPlay">Pacman, our hero, munches his way around the map, eating all of the
        dots. However, life isn\'t easy for our young little hero. Along his journey, he faces
        spooky ghosts who will try to hurt him. Avoid them! In each corner of the map, there is a
        power pellet. If Pacman eats a power pellet, he is temporarily gains the power to eat enemy
        ghosts.
    </string>
    <string name="controlsLabel">CONTROLS</string>
    <string name="controls">Up: Swipe Up\nDown: Swipe Down\nLeft: Swipe Left\nRight: Swipe Right\n
        "Pause: Hold Screen    "
    </string>
    <string name="settingsLabel">Settings</string>
    <string name="resumeLabel">Resume</string>
    <string name="wonGame">YOU WON!</string>
    <string name="keepPlaying">Press NEXT LEVEL to keep playing</string>
    <string name="gameOver">GAME OVER!</string>
    <string name="ok">Ok</string>
    <string name="settingsTitle"> SETTINGS</string>
    <string name="musicToggle">Toggle Music</string>
    <string name="difficulty">Level Difficulty:</string>
    <string name="easyDifficulty">Easy</string>
    <string name="mediumDifficulty">Medium</string>
    <string name="hardDifficulty">Hard</string>
    <string name="expertDifficulty">Expert</string>
    <string name="nextLevel">Next Level</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
