<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".gamefiles.activities.GameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/pacman"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_border"
            android:text="@string/play"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_border"
            android:text="@string/help"/>

        <Button
            android:id="@+id/showSettingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/rounded_corner_border"
            android:text="@string/settingsLabel"
            android:layout_marginBottom="5dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wonGame"
        android:id="@+id/textView3"
        android:layout_marginTop="39dp"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="@dimen/abc_action_bar_stacked_max_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:typeface="normal"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/keepPlaying"
        android:id="@+id/textView4"
        android:layout_marginStart="20dp"
        android:layout_above="@+id/linearLayout"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

</RelativeLayout>